--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            xheight: 100%;
+            height: 100%;
             pointer-events: none;
             background: repeating-linear-gradient(
                 0deg,
@@ -66,7 +66,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            xheight: 100%;
+            height: 100%;
             pointer-events: none;
             background-image: 
                 linear-gradient(var(--grid-color) 1px, transparent 1px),
