Updated BLOCKCHaiNSTOЯM title

--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
 							<div class="placeholder">⬛</div>
 						</div>
 						<div class="game-card-content">
-							<h3>BLOCKCHAINSTORM</h3>
+							<h3>BLOCKCHaiNSTOЯM</h3>
 							<p>A revolutionary twist on the classic falling blocks game. Journey through the solar system, survive cosmic disasters, and climb the leaderboards!</p>
 							<span class="status live">● LIVE</span>
 						</div>
