--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                 <div class="games-grid">
                     <a href="https://blockchainstorm.official-intelligence.art" class="game-card" target="_blank">
                         <div class="game-card-image">
-                            <div class="placeholder">⬛</div>
+							<img src="https://res.cloudinary.com/dzlhmwvlx/image/upload/v1764977226/BLOCKCHaiNSTO%D0%AFM_thumb_kplyy4.png" />
+                            <!-- div class="placeholder">⬛</div -->
                         </div>
                         <div class="game-card-content">
                             <h3>BLOCKCHaiNSTOЯM</h3>
