SEO optimization metadata

--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Official Intelligence</title>
     <meta name="description" content="AI-powered games and experiments from Official Intelligence">
+
+	<meta name="keywords" content="AI games, Tetris, block puzzle, Claude AI, artificial intelligence games, indie games, browser games, falling blocks">
+	<meta name="author" content="Official Intelligence">
+	<meta name="robots" content="index, follow">
+	<link rel="canonical" href="https://official-intelligence.art/">
+	
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://official-intelligence.art/">
+	<meta property="og:title" content="Official Intelligence - AI-Powered Games & Experiments">
+	<meta property="og:description" content="Play BLOCKCHaiNSTOЯM and other AI-powered games. Where artificial intelligence meets entertainment.">
+	<meta property="og:image" content="https://res.cloudinary.com/dzlhmwvlx/image/upload/v1764977477/BLOCKCHaiNSTO%D0%AFM_thumb_pceyvy.png">
+	
+	<!-- Twitter -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Official Intelligence - AI-Powered Games & Experiments">
+	<meta name="twitter:description" content="Play BLOCKCHaiNSTOЯM and other AI-powered games. Where artificial intelligence meets entertainment.">
+	<meta name="twitter:image" content="https://res.cloudinary.com/dzlhmwvlx/image/upload/v1764977477/BLOCKCHaiNSTO%D0%AFM_thumb_pceyvy.png">
     
     <!-- Retro Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
