Fixed refresh to update stats row

--- a/admin/tantris/index.html
+++ b/admin/tantris/index.html
@@ -90,7 +90,7 @@
             <div id="recordingsTab" class="tab-content active">
                 <div class="admin-header">
                     <h2>> GAME RECORDINGS</h2>
-                    <button class="btn btn-primary" onclick="loadRecordings()">🔄 REFRESH</button>
+                    <button class="btn btn-primary" onclick="loadRecordingsStats(); loadRecordings()">🔄 REFRESH</button>
                 </div>
                 
                 <div id="recordingsStats" class="stats-grid" style="margin-bottom: 20px;">
