--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                         </div>
                         <div class="game-card-content">
                             <h3>TaNTЯiS</h3>
-                            <p>A revolutionary twist on the classic falling blocks game. Journey through the solar system, survive cosmic disasters, and climb the leaderboards!</p>
+                            <p>A revolutionary twist on the classic falling blocks game. Journey through the solar system, survive cosmic disasters, and climb the leaderboards!
+							It's like Tetris on peyote while sneezing slowly for six hours...</p>
                             <span class="status live">● LIVE</span>
                         </div>
                     </a>
