--- a/admin/tantris/index.html
+++ b/admin/tantris/index.html
@@ -678,12 +678,12 @@ ${bug.debug_log ? escapeHtml(bug.debug_log) : '<em>No debug log</em>'}
                     if (data.top_referrers && data.top_referrers.length > 0) {
                         let refHtml = '<h3 style="margin-bottom: 10px; color: var(--primary);">> Top Referrers</h3>';
                         refHtml += '<table style="width: 100%; border-collapse: collapse;">';
-                        refHtml += '<tr style="border-bottom: 1px solid var(--primary);"><th style="text-align: left; padding: 5px;">Referrer</th><th style="text-align: right; padding: 5px;">Visits</th><th style="text-align: right; padding: 5px;">Played</th><th style="text-align: right; padding: 5px;">Conv%</th></tr>';
+                        refHtml += '<tr style="border-bottom: 1px solid var(--primary);"><th style="text-align: left; padding: 5px;">Referrer</th><th style="text-align: right; padding: 5px;">Visits</th><th style="text-align: right; padding: 5px;">Played</th><th style="text-align: right; padding: 5px;">Started</th><th style="text-align: right; padding: 5px;">Conv%</th></tr>';
                         data.top_referrers.forEach(r => {
-                            const conv = r.visits > 0 ? (r.played / r.visits * 100).toFixed(1) : '0.0';
+                            const conv = r.visits > 0 ? (r.started / r.visits * 100).toFixed(1) : '0.0';
                             // Truncate long referrers
                             const shortRef = r.referrer.length > 60 ? r.referrer.substring(0, 60) + '...' : r.referrer;
-                            refHtml += `<tr style="border-bottom: 1px solid rgba(255,255,255,0.1);"><td style="padding: 5px; color: var(--text-dim); word-break: break-all;">${escapeHtml(shortRef)}</td><td style="text-align: right; padding: 5px;">${r.visits}</td><td style="text-align: right; padding: 5px;">${r.played}</td><td style="text-align: right; padding: 5px;">${conv}%</td></tr>`;
+                            refHtml += `<tr style="border-bottom: 1px solid rgba(255,255,255,0.1);"><td style="padding: 5px; color: var(--text-dim); word-break: break-all;">${escapeHtml(shortRef)}</td><td style="text-align: right; padding: 5px;">${r.visits}</td><td style="text-align: right; padding: 5px;">${r.played}</td><td style="text-align: right; padding: 5px;">${r.started}</td><td style="text-align: right; padding: 5px;">${conv}%</td></tr>`;
                         });
                         refHtml += '</table>';
                         document.getElementById('visitReferrers').innerHTML = refHtml;
@@ -693,10 +693,10 @@ ${bug.debug_log ? escapeHtml(bug.debug_log) : '<em>No debug log</em>'}
                     if (data.top_languages && data.top_languages.length > 0) {
                         let langHtml = '<h3 style="margin-bottom: 10px; color: var(--primary);">> Top Languages</h3>';
                         langHtml += '<table style="width: 100%; border-collapse: collapse;">';
-                        langHtml += '<tr style="border-bottom: 1px solid var(--primary);"><th style="text-align: left; padding: 5px;">Language</th><th style="text-align: right; padding: 5px;">Visits</th><th style="text-align: right; padding: 5px;">Played</th><th style="text-align: right; padding: 5px;">Conv%</th></tr>';
+                        langHtml += '<tr style="border-bottom: 1px solid var(--primary);"><th style="text-align: left; padding: 5px;">Language</th><th style="text-align: right; padding: 5px;">Visits</th><th style="text-align: right; padding: 5px;">Played</th><th style="text-align: right; padding: 5px;">Started</th><th style="text-align: right; padding: 5px;">Conv%</th></tr>';
                         data.top_languages.forEach(l => {
-                            const conv = l.visits > 0 ? (l.played / l.visits * 100).toFixed(1) : '0.0';
-                            langHtml += `<tr style="border-bottom: 1px solid rgba(255,255,255,0.1);"><td style="padding: 5px;">${escapeHtml(l.language)}</td><td style="text-align: right; padding: 5px;">${l.visits}</td><td style="text-align: right; padding: 5px;">${l.played}</td><td style="text-align: right; padding: 5px;">${conv}%</td></tr>`;
+                            const conv = l.visits > 0 ? (l.started / l.visits * 100).toFixed(1) : '0.0';
+                            langHtml += `<tr style="border-bottom: 1px solid rgba(255,255,255,0.1);"><td style="padding: 5px;">${escapeHtml(l.language)}</td><td style="text-align: right; padding: 5px;">${l.visits}</td><td style="text-align: right; padding: 5px;">${l.played}</td><td style="text-align: right; padding: 5px;">${l.started}</td><td style="text-align: right; padding: 5px;">${conv}%</td></tr>`;
                         });
                         langHtml += '</table>';
                         document.getElementById('visitLanguages').innerHTML = langHtml;
