--- a/admin/tantris/index.html
+++ b/admin/tantris/index.html
@@ -154,6 +154,10 @@
                 <div id="visitChart" style="margin-top: 20px;"></div>
                 <div id="visitReferrers" style="margin-top: 20px;"></div>
                 <div id="visitLanguages" style="margin-top: 20px;"></div>
+                <div style="display: flex; gap: 20px; margin-top: 20px; flex-wrap: wrap;">
+                    <div id="visitDevices" style="flex: 1; min-width: 200px;"></div>
+                    <div id="visitOS" style="flex: 1; min-width: 200px;"></div>
+                </div>
             </div>
         </div>
         
@@ -706,6 +710,46 @@ ${bug.debug_log ? escapeHtml(bug.debug_log) : '<em>No debug log</em>'}
                         });
                         langHtml += '</table>';
                         document.getElementById('visitLanguages').innerHTML = langHtml;
+                    }
+
+                    // Device type breakdown
+                    if (data.device_breakdown && data.device_breakdown.length > 0) {
+                        const totalDevices = data.device_breakdown.reduce((s, d) => s + d.count, 0);
+                        const deviceColors = { desktop: '#0096ff', tablet: '#00ff64', phone: '#ffc800' };
+                        const deviceIcons = { desktop: '🖥️', tablet: '📱', phone: '📲' };
+                        let deviceHtml = '<h3 style="margin-bottom: 10px; color: var(--primary);">> Devices</h3>';
+                        data.device_breakdown.forEach(d => {
+                            const pct = (d.count / totalDevices * 100).toFixed(1);
+                            const color = deviceColors[d.type] || '#888';
+                            const icon = deviceIcons[d.type] || '';
+                            deviceHtml += `<div style="margin: 6px 0; display: flex; align-items: center; gap: 8px;">
+                                <span style="width: 80px; color: var(--text-dim);">${icon} ${d.type}</span>
+                                <div style="flex: 1; height: 16px; background: rgba(255,255,255,0.05);">
+                                    <div style="height: 100%; width: ${pct}%; background: ${color}; opacity: 0.6;"></div>
+                                </div>
+                                <span style="width: 80px; text-align: right; color: var(--text-dim);">${d.count} (${pct}%)</span>
+                            </div>`;
+                        });
+                        document.getElementById('visitDevices').innerHTML = deviceHtml;
+                    }
+
+                    // OS breakdown
+                    if (data.os_breakdown && data.os_breakdown.length > 0) {
+                        const totalOS = data.os_breakdown.reduce((s, o) => s + o.count, 0);
+                        const osColors = { Windows: '#0078d4', iOS: '#a2aaad', Android: '#3ddc84', macOS: '#555', Linux: '#f5a623', Other: '#888' };
+                        let osHtml = '<h3 style="margin-bottom: 10px; color: var(--primary);">> Operating Systems</h3>';
+                        data.os_breakdown.forEach(o => {
+                            const pct = (o.count / totalOS * 100).toFixed(1);
+                            const color = osColors[o.os] || '#888';
+                            osHtml += `<div style="margin: 6px 0; display: flex; align-items: center; gap: 8px;">
+                                <span style="width: 80px; color: var(--text-dim);">${escapeHtml(o.os)}</span>
+                                <div style="flex: 1; height: 16px; background: rgba(255,255,255,0.05);">
+                                    <div style="height: 100%; width: ${pct}%; background: ${color}; opacity: 0.6;"></div>
+                                </div>
+                                <span style="width: 80px; text-align: right; color: var(--text-dim);">${o.count} (${pct}%)</span>
+                            </div>`;
+                        });
+                        document.getElementById('visitOS').innerHTML = osHtml;
                     }
                 }
             } catch (err) {
