--- a/admin/tantris/index.html
+++ b/admin/tantris/index.html
@@ -157,6 +157,7 @@
                 <div style="display: flex; gap: 20px; margin-top: 20px; flex-wrap: wrap;">
                     <div id="visitDevices" style="flex: 1; min-width: 200px;"></div>
                     <div id="visitOS" style="flex: 1; min-width: 200px;"></div>
+                    <div id="visitShares" style="flex: 1; min-width: 200px;"></div>
                 </div>
             </div>
         </div>
@@ -631,8 +632,12 @@ ${bug.debug_log ? escapeHtml(bug.debug_log) : '<em>No debug log</em>'}
                                 <div class="stat-label">Finished Game</div>
                             </div>
                             <div class="stat-card">
-                                <div class="stat-value">${data.conversion_rate}% → ${data.start_rate}% → ${data.finish_rate}%</div>
-                                <div class="stat-label">Play / Start / Finish Rate</div>
+                                <div class="stat-value">${data.total_shared}</div>
+                                <div class="stat-label">Shared Game</div>
+                            </div>
+                            <div class="stat-card">
+                                <div class="stat-value">${data.conversion_rate}% → ${data.start_rate}% → ${data.finish_rate}% → ${data.share_rate}%</div>
+                                <div class="stat-label">Play / Start / Finish / Share Rate</div>
                             </div>
                             <div class="stat-card">
                                 <div class="stat-value">${data.avg_time_to_play}s</div>
@@ -641,16 +646,16 @@ ${bug.debug_log ? escapeHtml(bug.debug_log) : '<em>No debug log</em>'}
                         </div>
                         <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 15px; margin-top: 15px;">
                             <div class="stat-card">
-                                <div class="stat-value">${data.visits_24h} → ${data.played_24h} → ${data.started_24h} → ${data.finished_24h}</div>
-                                <div class="stat-label">Last 24h (${data.conversion_24h}% / ${data.start_rate_24h}% / ${data.finish_rate_24h}%)</div>
+                                <div class="stat-value">${data.visits_24h} → ${data.played_24h} → ${data.started_24h} → ${data.finished_24h} → ${data.shared_24h}</div>
+                                <div class="stat-label">Last 24h (${data.conversion_24h}% / ${data.start_rate_24h}% / ${data.finish_rate_24h}% / ${data.share_rate_24h}%)</div>
                             </div>
                             <div class="stat-card">
-                                <div class="stat-value">${data.visits_7d} → ${data.played_7d} → ${data.started_7d} → ${data.finished_7d}</div>
-                                <div class="stat-label">Last 7d (${data.conversion_7d}% / ${data.start_rate_7d}% / ${data.finish_rate_7d}%)</div>
+                                <div class="stat-value">${data.visits_7d} → ${data.played_7d} → ${data.started_7d} → ${data.finished_7d} → ${data.shared_7d}</div>
+                                <div class="stat-label">Last 7d (${data.conversion_7d}% / ${data.start_rate_7d}% / ${data.finish_rate_7d}% / ${data.share_rate_7d}%)</div>
                             </div>
                             <div class="stat-card">
-                                <div class="stat-value">${data.visits_30d} → ${data.played_30d} → ${data.started_30d} → ${data.finished_30d}</div>
-                                <div class="stat-label">Last 30d (${data.conversion_30d}% / ${data.start_rate_30d}% / ${data.finish_rate_30d}%)</div>
+                                <div class="stat-value">${data.visits_30d} → ${data.played_30d} → ${data.started_30d} → ${data.finished_30d} → ${data.shared_30d}</div>
+                                <div class="stat-label">Last 30d (${data.conversion_30d}% / ${data.start_rate_30d}% / ${data.finish_rate_30d}% / ${data.share_rate_30d}%)</div>
                             </div>
                         </div>
                     `;
@@ -675,12 +680,13 @@ ${bug.debug_log ? escapeHtml(bug.debug_log) : '<em>No debug log</em>'}
                                     <div style="position: absolute; height: 100%; width: ${playedBar}%; background: rgba(0,255,100,0.4);"></div>
                                     <div style="position: absolute; height: 100%; width: ${startedBar}%; background: rgba(255,200,0,0.5);"></div>
                                     <div style="position: absolute; height: 100%; width: ${finishedBar}%; background: rgba(255,80,80,0.6);"></div>
+                                    <div style="position: absolute; height: 100%; width: ${Math.round((d.shared || 0) * barWidth)}%; background: rgba(180,80,255,0.6);"></div>
                                 </div>
-                                <span style="width: 120px; text-align: right; color: var(--text-dim);">${d.visits}/${d.played}/${d.started}/${d.finished}</span>
+                                <span style="width: 140px; text-align: right; color: var(--text-dim);">${d.visits}/${d.played}/${d.started}/${d.finished}/${d.shared || 0}</span>
                             </div>`;
                         });
                         chartHtml += '</div>';
-                        chartHtml += '<div style="margin-top: 5px; font-size: 11px; color: var(--text-dim);"><span style="color: rgba(0,150,255,0.7);">■</span> Visits &nbsp; <span style="color: rgba(0,255,100,0.7);">■</span> Played &nbsp; <span style="color: rgba(255,200,0,0.8);">■</span> Started &nbsp; <span style="color: rgba(255,80,80,0.8);">■</span> Finished</div>';
+                        chartHtml += '<div style="margin-top: 5px; font-size: 11px; color: var(--text-dim);"><span style="color: rgba(0,150,255,0.7);">■</span> Visits &nbsp; <span style="color: rgba(0,255,100,0.7);">■</span> Played &nbsp; <span style="color: rgba(255,200,0,0.8);">■</span> Started &nbsp; <span style="color: rgba(255,80,80,0.8);">■</span> Finished &nbsp; <span style="color: rgba(180,80,255,0.8);">■</span> Shared</div>';
                         document.getElementById('visitChart').innerHTML = chartHtml;
                     }
                     
@@ -750,6 +756,27 @@ ${bug.debug_log ? escapeHtml(bug.debug_log) : '<em>No debug log</em>'}
                             </div>`;
                         });
                         document.getElementById('visitOS').innerHTML = osHtml;
+                    }
+
+                    // Share platform breakdown
+                    if (data.share_breakdown && data.share_breakdown.length > 0) {
+                        const totalShares = data.share_breakdown.reduce((s, d) => s + d.count, 0);
+                        const shareColors = { twitter: '#1DA1F2', facebook: '#4267B2', reddit: '#FF4500', whatsapp: '#25D366', telegram: '#0088cc', copylink: '#888' };
+                        const shareIcons = { twitter: '𝕏', facebook: 'f', reddit: '⬆', whatsapp: '💬', telegram: '✈', copylink: '🔗' };
+                        let shareHtml = '<h3 style="margin-bottom: 10px; color: var(--primary);">> Share Platforms</h3>';
+                        data.share_breakdown.forEach(d => {
+                            const pct = (d.count / totalShares * 100).toFixed(1);
+                            const color = shareColors[d.platform] || '#888';
+                            const icon = shareIcons[d.platform] || '';
+                            shareHtml += `<div style="margin: 6px 0; display: flex; align-items: center; gap: 8px;">
+                                <span style="width: 80px; color: var(--text-dim);">${icon} ${d.platform}</span>
+                                <div style="flex: 1; height: 16px; background: rgba(255,255,255,0.05);">
+                                    <div style="height: 100%; width: ${pct}%; background: ${color}; opacity: 0.6;"></div>
+                                </div>
+                                <span style="width: 80px; text-align: right; color: var(--text-dim);">${d.count} (${pct}%)</span>
+                            </div>`;
+                        });
+                        document.getElementById('visitShares').innerHTML = shareHtml;
                     }
                 }
             } catch (err) {
