--- a/admin/tantris/index.html
+++ b/admin/tantris/index.html
@@ -159,6 +159,12 @@
                     <div id="visitOS" style="flex: 1; min-width: 200px;"></div>
                     <div id="visitShares" style="flex: 1; min-width: 200px;"></div>
                 </div>
+                <div style="display: flex; gap: 20px; margin-top: 20px; flex-wrap: wrap;">
+                    <div id="visitDifficulty" style="flex: 1; min-width: 200px;"></div>
+                    <div id="visitSkillLevel" style="flex: 1; min-width: 200px;"></div>
+                    <div id="visitModes" style="flex: 1; min-width: 200px;"></div>
+                </div>
+                <div id="visitChallenges" style="margin-top: 20px;"></div>
             </div>
         </div>
         
@@ -777,6 +783,88 @@ ${bug.debug_log ? escapeHtml(bug.debug_log) : '<em>No debug log</em>'}
                             </div>`;
                         });
                         document.getElementById('visitShares').innerHTML = shareHtml;
+                    }
+
+                    // Difficulty breakdown
+                    if (data.difficulty_breakdown && data.difficulty_breakdown.length > 0) {
+                        const totalDiff = data.difficulty_breakdown.reduce((s, d) => s + d.count, 0);
+                        const diffColors = { drizzle: '#52B788', downpour: '#45B7D1', hailstorm: '#FFD93D', blizzard: '#FF6B6B', hurricane: '#C084FC' };
+                        const diffIcons = { drizzle: '🌧️', downpour: '⛈️', hailstorm: '🌨️', blizzard: '❄️', hurricane: '🌀' };
+                        let diffHtml = '<h3 style="margin-bottom: 10px; color: var(--primary);">> Difficulty</h3>';
+                        data.difficulty_breakdown.forEach(d => {
+                            const pct = (d.count / totalDiff * 100).toFixed(1);
+                            const color = diffColors[d.difficulty] || '#888';
+                            const icon = diffIcons[d.difficulty] || '';
+                            diffHtml += `<div style="margin: 6px 0; display: flex; align-items: center; gap: 8px;">
+                                <span style="width: 90px; color: var(--text-dim);">${icon} ${d.difficulty}</span>
+                                <div style="flex: 1; height: 16px; background: rgba(255,255,255,0.05);">
+                                    <div style="height: 100%; width: ${pct}%; background: ${color}; opacity: 0.6;"></div>
+                                </div>
+                                <span style="width: 80px; text-align: right; color: var(--text-dim);">${d.count} (${pct}%)</span>
+                            </div>`;
+                        });
+                        document.getElementById('visitDifficulty').innerHTML = diffHtml;
+                    }
+
+                    // Skill level breakdown
+                    if (data.skill_breakdown && data.skill_breakdown.length > 0) {
+                        const totalSkill = data.skill_breakdown.reduce((s, d) => s + d.count, 0);
+                        const skillColors = { breeze: '#52B788', tempest: '#FFD93D', maelstrom: '#FF6B6B' };
+                        const skillIcons = { breeze: '🌤️', tempest: '🌪️', maelstrom: '🌀' };
+                        let skillHtml = '<h3 style="margin-bottom: 10px; color: var(--primary);">> Skill Level</h3>';
+                        data.skill_breakdown.forEach(d => {
+                            const pct = (d.count / totalSkill * 100).toFixed(1);
+                            const color = skillColors[d.skill_level] || '#888';
+                            const icon = skillIcons[d.skill_level] || '';
+                            skillHtml += `<div style="margin: 6px 0; display: flex; align-items: center; gap: 8px;">
+                                <span style="width: 90px; color: var(--text-dim);">${icon} ${d.skill_level}</span>
+                                <div style="flex: 1; height: 16px; background: rgba(255,255,255,0.05);">
+                                    <div style="height: 100%; width: ${pct}%; background: ${color}; opacity: 0.6;"></div>
+                                </div>
+                                <span style="width: 80px; text-align: right; color: var(--text-dim);">${d.count} (${pct}%)</span>
+                            </div>`;
+                        });
+                        document.getElementById('visitSkillLevel').innerHTML = skillHtml;
+                    }
+
+                    // Mode breakdown
+                    if (data.mode_breakdown && data.mode_breakdown.length > 0) {
+                        const totalMode = data.mode_breakdown.reduce((s, d) => s + d.count, 0);
+                        const modeColors = { normal: '#45B7D1', challenge: '#FFD93D', ai: '#C084FC', 'ai-challenge': '#FF6B6B' };
+                        const modeIcons = { normal: '🎮', challenge: '🏆', ai: '🤖', 'ai-challenge': '🤖🏆' };
+                        let modeHtml = '<h3 style="margin-bottom: 10px; color: var(--primary);">> Game Mode</h3>';
+                        data.mode_breakdown.forEach(d => {
+                            const pct = (d.count / totalMode * 100).toFixed(1);
+                            const color = modeColors[d.mode] || '#888';
+                            const icon = modeIcons[d.mode] || '';
+                            modeHtml += `<div style="margin: 6px 0; display: flex; align-items: center; gap: 8px;">
+                                <span style="width: 100px; color: var(--text-dim);">${icon} ${d.mode}</span>
+                                <div style="flex: 1; height: 16px; background: rgba(255,255,255,0.05);">
+                                    <div style="height: 100%; width: ${pct}%; background: ${color}; opacity: 0.6;"></div>
+                                </div>
+                                <span style="width: 80px; text-align: right; color: var(--text-dim);">${d.count} (${pct}%)</span>
+                            </div>`;
+                        });
+                        document.getElementById('visitModes').innerHTML = modeHtml;
+                    }
+
+                    // Challenge breakdown
+                    if (data.challenge_breakdown && data.challenge_breakdown.length > 0) {
+                        const totalChal = data.challenge_breakdown.reduce((s, d) => s + d.count, 0);
+                        const chalColors = { stranger: '#FF6B6B', dyslexic: '#C084FC', phantom: '#45B7D1', amnesia: '#FFD93D', vertigo: '#52B788', gremlin: '#FF8C00' };
+                        let chalHtml = '<h3 style="margin-bottom: 10px; color: var(--primary);">> Challenges Played</h3>';
+                        data.challenge_breakdown.forEach(d => {
+                            const pct = (d.count / totalChal * 100).toFixed(1);
+                            const color = chalColors[d.challenge] || '#888';
+                            chalHtml += `<div style="margin: 6px 0; display: flex; align-items: center; gap: 8px;">
+                                <span style="width: 90px; color: var(--text-dim);">${d.challenge}</span>
+                                <div style="flex: 1; height: 16px; background: rgba(255,255,255,0.05);">
+                                    <div style="height: 100%; width: ${pct}%; background: ${color}; opacity: 0.6;"></div>
+                                </div>
+                                <span style="width: 80px; text-align: right; color: var(--text-dim);">${d.count} (${pct}%)</span>
+                            </div>`;
+                        });
+                        document.getElementById('visitChallenges').innerHTML = chalHtml;
                     }
                 }
             } catch (err) {
